--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -1,43 +1,44 @@
-*{
-    margin:0;
-    padding:0;
-    border:0;
-    box-sizing: border-box;
-}
-li{
-    list-style: none;
-}
 
-a{
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    box-sizing: border-box;
+  }
+  li {
+    list-style: none;
+  }
+  
+  a {
     display: block;
     color: inherit;
     text-decoration: none;
-}
-p{
+  }
+  p {
     line-height: 29px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-weight: 400;
-    font-size: .9em;
+    font-size: 1em;
     color: black;
     line-height: 2em;
-}
-p a {
+  }
+  p a {
     display: inline;
-}
-img{
+  }
+  img {
     max-width: 100%;
     object-fit: cover;
     display: block;
-}
-h1, h2, h3, h4, h5, h6{
+  }
+  h1, h2, h3, h4, h5, h6 {
     font-size: inherit;
-    color: inherit;   
-}
-body{
+    color: inherit;
+  }
+  body {
     font-size: 16px;
-    font-family: 'Montserrat', sans-serif;    
-}
-.centered{
+    font-family: "Montserrat", sans-serif;
+  }
+  .centered {
     width: 80%;
     margin: auto;
-}
+  }
