--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,7 +2,6 @@
 
 body {
   font-family: $font-default;
-  overflow-x: hidden;
 }
 
 .main {
@@ -13,6 +12,75 @@ body {
   .model-1 {
     width: 100%;
     position: relative;
+    .nav-left {
+      width: 37%;
+      position: absolute;
+      left: 0;
+      animation: go-top 1s ease 1 both 1.5s;
+      z-index: 3;
+
+      ul {
+        min-height: 100vh;
+        transform: rotate(-90deg);
+        @include flexible(row, nowrap, space-around, center, auto);
+      }
+
+      li {
+        color: $white;
+        text-transform: uppercase;
+        font-size: 0.6em;
+      }
+    }
+
+    .nav-right {
+      width: 37%;
+      position: absolute;
+      right: 0;
+      animation: go-down 1s ease 1 both 3s;
+      z-index: 3;
+
+      ul {
+        min-height: 100vh;
+        transform: rotate(90deg);
+        @include flexible(row, nowrap, space-around, center, auto);
+      }
+
+      li {
+        color: $white;
+        text-transform: uppercase;
+        font-size: 0.6em;
+      }
+    }
+
+    .slider-container {
+      width: 100%;
+      min-height: 100vh;
+      position: relative;
+    }
+
+    .single-slide {
+      width: 100%;
+      height: 100vh;
+      position: absolute;
+      opacity: 0;
+      animation: slider-animation;
+      animation-duration: 20s;
+      animation-iteration-count: infinite;
+      animation-timing-function: ease-in-out;
+      background-size: cover;
+    }
+    #slide-1 {
+      background-image: url(https://images7.alphacoders.com/391/391001.jpg);
+      background-size: cover;
+    }
+    #slide-2 {
+      animation-delay: 3s;
+      background-image: url(https://images5.alphacoders.com/426/426029.jpg);
+    }
+    #slide-3 {
+      animation-delay: 6s;
+      background-image: url(https://images7.alphacoders.com/391/391001.jpg);
+    }
   }
 
   .model1-info {
@@ -68,89 +136,18 @@ body {
     }
   }
 
-
-  .nav-left {
-    width: 37%;
-    position: absolute;
-    left: 0;
-    animation: go-top 1s ease 1 both 1.5s;
-    z-index: 3;
-
-    ul {
-      min-height: 100vh;
-      transform: rotate(-90deg);
-      @include flexible(row, nowrap, space-around, center, auto);
-    }
-
-    li {
-      color: $white;
-      text-transform: uppercase;
-      font-size: 0.6em;
-    }
-  }
-
-  .nav-right {
-    width: 37%;
-    position: absolute;
-    right: 0;
-    animation: go-down 1s ease 1 both 3s;
-    z-index: 3;
-
-    ul {
-      min-height: 100vh;
-      transform: rotate(90deg);
-      @include flexible(row, nowrap, space-around, center, auto);
-    }
-
-    li {
-      color: $white;
-      text-transform: uppercase;
-      font-size: 0.6em;
-    }
-  }
-
-  .slider-container {
-    width: 100%;
-    min-height: 100vh;
-    position: relative;
-  }
-
-  .single-slide {
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    opacity: 0;
-    animation: slider-animation;
-    animation-duration: 20s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
-    background-size: cover;
-  }
-
-  #slide-1 {
-    background-image: url(https://images7.alphacoders.com/391/391001.jpg);
-    background-size: cover;
-  }
-  #slide-2 {
-    animation-delay: 3s;
-    background-image: url(https://images5.alphacoders.com/426/426029.jpg);
-  }
-  #slide-3 {
-    animation-delay: 6s;
-    background-image: url(https://images7.alphacoders.com/391/391001.jpg);
-  }
- 
   .model-2 {
     @include flexible(row, nowrap, center, center, auto);
+    min-height: 100vh;
     position: relative;
 
     &-info {
       width: 100%;
-      min-height: 900px;
+      min-height: 120vh;
       position: absolute;
       z-index: 4;
       top: 0%;
-      @include flexible(row, wrap, center, center, auto);
+      @include flexible(column, wrap, center, center, auto);
     }
 
     .span-model {
@@ -162,7 +159,7 @@ body {
       z-index: 4;
     }
 
-    h2{
+    h2 {
       font-family: $font-default;
       font-size: 3.5em;
       font-weight: 800;
@@ -170,14 +167,15 @@ body {
       text-align: center;
       text-transform: uppercase;
     }
+
     .new-way {
       width: 64%;
       @include flexible(row, nowrap, flex-start, center, auto);
-
+      margin-top: 7em;
       img {
         margin: 2em;
       }
- 
+
       &-h3 {
         font-family: $font-default;
         font-weight: 300;
@@ -188,14 +186,14 @@ body {
 
       &-p {
         width: 60%;
-        font-family: 'Open Sans', sans-serif;
+        font-family: "Open Sans", sans-serif;
         font-weight: 300;
         color: $white;
         font-size: 1em;
         text-align: left;
       }
     }
-    
+
     .slider {
       width: 100%;
       overflow: hidden;
@@ -209,10 +207,12 @@ body {
 
     .slider-img {
       width: calc(100% / 3);
+      min-height: 100vh;
     }
 
     .slider-lines {
       width: 100%;
+      height: 20px;
       padding: 1em;
       position: absolute;
       bottom: 1em;
@@ -230,7 +230,7 @@ body {
     }
 
     .slider-line.active {
-      background-color: blue;
+      background-color: $blue;
     }
   }
 
@@ -240,12 +240,133 @@ body {
     background-color: $black;
 
     ul {
-      @include flexible(row, nowrap, center, center, auto);
+      @include flexible(row, nowrap, flex-start, center, auto);
 
       li {
-        margin: 1em 0em 0em;
+        width: 200px;
         padding: 1em;
+      }
+
+      li p {
+        font-family: $font-default;
+        font-weight: 600;
+        color: $white;
+        text-transform: uppercase;
+        font-size: 1.1em;
       }
     }
   }
+
+  .model-4 {
+    width: 100%;
+    background-color: red;
+
+    .wrapper {
+      width: 100%;
+      min-height: 400px;
+      background-color: $black;
+      display: grid;
+      grid-template-columns: repeat(4,1fr);
+      grid-template-rows: repeat(4,1fr);
+
+      &-one {
+        @include flexible (row, nowrap, center, center, auto);
+        grid-column: 1/3;
+        grid-row: 1/5;
+      }
+      &-two {
+        grid-column: 3/5;
+        grid-row: 1/3;
+      }
+      &-three {
+        background-color: red;
+        grid-column: 3/4;
+        grid-row: 3/5;
+      }
+      &-four {
+        background-color: green;
+        grid-column: 4/5;
+        grid-row: 3/5;
+      }
+    }
+    .artist {
+      &-sound {
+      width: 30%;
+      }
+      &-p {
+        font-family: $font-default;
+        font-weight: 600;
+        color: $white;
+        text-transform: uppercase;
+        font-size: 1.2em;
+        letter-spacing: 2px;
+      }
+      &-h2 {
+        font-family: $font-default;
+        color: $white;
+        text-transform: uppercase;
+        font-size: 2.8em;
+        font-weight: 900;
+        letter-spacing: 0.1em;
+      }
+      &-film {
+        font-family: $font-default;
+        color: $white;
+        font-weight: 100;
+        text-transform: uppercase;
+        font-size: 3em;
+      }
+    }
+
+   
+  }
 }
+.footer {
+  width: 100%;
+  background-color: $light-black;
+
+  .centered {
+    @include flexible(column, wrap, center, center, auto);
+
+  }
+  &-logo {
+    width: 20%;
+    margin: 6em 0em 2em;
+  }
+  
+  &-p {
+    color: $white;
+    font-size: 1em;
+    text-transform: uppercase;
+
+    &.web {
+      font-size: 0.8em;
+    }
+  }
+
+  &-span {
+    color: $white;
+    font-size: 0.8em;
+    margin: 2em 0em 4em;
+  }
+
+  &-ul {
+    @include flexible(row, nowrap, center, center, auto);
+  }
+
+  &-li {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    color: $white;
+    font-size: 0.6em;
+    text-transform: uppercase;
+    letter-spacing: 0.15em;
+    margin: 0 2.5em;
+    padding-bottom: 1em;
+    :hover {
+      color: $grey;
+    }
+  }
+ 
+}
+
