--- a/css/styles.css
+++ b/css/styles.css
@@ -523,7 +523,6 @@ body {
 }
 .main .model-4 {
   width: 100%;
-  background-color: red;
 }
 .main .model-4 .wrapper {
   width: 100%;
@@ -632,7 +631,6 @@ body {
   grid-row: 1/3;
 }
 .main .model-4 .wrapper-three {
-  background-color: red;
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-column: 3/4;
@@ -641,7 +639,6 @@ body {
   grid-row: 3/5;
 }
 .main .model-4 .wrapper-four {
-  background-color: green;
   -ms-grid-column: 4;
   -ms-grid-column-span: 1;
   grid-column: 4/5;
@@ -674,6 +671,44 @@ body {
   font-weight: 100;
   text-transform: uppercase;
   font-size: 3em;
+}
+.main .model-5 h4 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 100;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 1.3em;
+  text-align: center;
+  margin: 1em 0em;
+}
+.main .model-5 .social-gallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: auto;
+      align-content: auto;
+}
+.main .model-5 .social-gallery article {
+  margin: 0em 1em;
+  position: relative;
+}
+.main .model-5 .social-icon {
+  color: #B3C6D4;
+  font-size: 2em;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 4;
 }
 
 .footer {
