--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -259,7 +259,6 @@ body {
 
   .model-4 {
     width: 100%;
-    background-color: red;
 
     .wrapper {
       width: 100%;
@@ -279,12 +278,10 @@ body {
         grid-row: 1/3;
       }
       &-three {
-        background-color: red;
         grid-column: 3/4;
         grid-row: 3/5;
       }
       &-four {
-        background-color: green;
         grid-column: 4/5;
         grid-row: 3/5;
       }
@@ -317,8 +314,39 @@ body {
         font-size: 3em;
       }
     }
+  }
 
-   
+  .model-5{
+
+    h4 {
+      font-family: $font-default;
+      font-weight: 100;
+      color: $white;
+      text-transform: uppercase;
+      font-size: 1.3em;
+      text-align: center;
+      margin: 1em 0em;
+    }
+
+    .social-gallery {
+      @include flexible (row, nowrap, center, center, auto);
+
+      article {
+        margin: 0em 1em;
+        position: relative;
+      }
+    }
+
+    .social-icon {
+      color: #B3C6D4;
+      font-size: 2em;
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 4;
+    }
+    
+
   }
 }
 .footer {
