--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -263,7 +263,7 @@ body {
     .wrapper {
       width: 100%;
       min-height: 400px;
-      background-color: $black;
+      background-color: $light-black;
       display: grid;
       grid-template-columns: repeat(4,1fr);
       grid-template-rows: repeat(4,1fr);
@@ -272,24 +272,30 @@ body {
         @include flexible (row, nowrap, center, center, auto);
         grid-column: 1/3;
         grid-row: 1/5;
+        position: relative;
       }
+
       &-two {
         grid-column: 3/5;
         grid-row: 1/3;
       }
+
       &-three {
         grid-column: 3/4;
         grid-row: 3/5;
       }
+
       &-four {
         grid-column: 4/5;
         grid-row: 3/5;
       }
+
     }
     .artist {
       &-sound {
       width: 30%;
       }
+
       &-p {
         font-family: $font-default;
         font-weight: 600;
@@ -298,6 +304,7 @@ body {
         font-size: 1.2em;
         letter-spacing: 2px;
       }
+
       &-h2 {
         font-family: $font-default;
         color: $white;
@@ -306,6 +313,7 @@ body {
         font-weight: 900;
         letter-spacing: 0.1em;
       }
+
       &-film {
         font-family: $font-default;
         color: $white;
@@ -313,6 +321,14 @@ body {
         text-transform: uppercase;
         font-size: 3em;
       }
+
+      &-plus {
+        width: 8%;
+        position: absolute;
+        bottom: 4em;
+        right: 4em;
+      }
+
     }
   }
 
@@ -325,14 +341,14 @@ body {
       text-transform: uppercase;
       font-size: 1.3em;
       text-align: center;
-      margin: 1em 0em;
+      margin: 2em 0em 0em 0em;
     }
 
     .social-gallery {
       @include flexible (row, nowrap, center, center, auto);
 
       article {
-        margin: 0em 1em;
+        margin: 2em 0em;
         position: relative;
       }
     }
