--- a/css/styles.css
+++ b/css/styles.css
@@ -51,29 +51,6 @@ body {
   margin: auto;
 }
 
-@-webkit-keyframes go-down {
-  from {
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
-    opacity: 0;
-  }
-  to {
-    -webkit-transform: translateY(0%);
-            transform: translateY(0%);
-  }
-}
-
-@keyframes go-down {
-  from {
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
-    opacity: 0;
-  }
-  to {
-    -webkit-transform: translateY(0%);
-            transform: translateY(0%);
-  }
-}
 @-webkit-keyframes go-top {
   from {
     -webkit-transform: translateY(50%);
@@ -85,6 +62,7 @@ body {
             transform: translateY(0%);
   }
 }
+
 @keyframes go-top {
   from {
     -webkit-transform: translateY(50%);
@@ -94,6 +72,68 @@ body {
   to {
     -webkit-transform: translateY(0%);
             transform: translateY(0%);
+  }
+}
+@-webkit-keyframes go-down {
+  from {
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+@keyframes go-down {
+  from {
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+@-webkit-keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes move-border {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    border: 2px solid #ffffff;
+    opacity: 1;
+  }
+}
+@keyframes move-border {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    border: 2px solid #ffffff;
+    opacity: 1;
   }
 }
 @-webkit-keyframes slider-animation {
@@ -132,6 +172,7 @@ body {
 }
 body {
   font-family: "Montserrat", sans-serif;
+  overflow-x: hidden;
 }
 
 .main {
@@ -147,8 +188,8 @@ body {
   width: 37%;
   position: absolute;
   left: 0;
-  -webkit-animation: go-top 1s ease 1 both 1.5s;
-          animation: go-top 1s ease 1 both 1.5s;
+  -webkit-animation: go-top 1.5s ease 1 both 1.5s;
+          animation: go-top 1.5s ease 1 both 1.5s;
   z-index: 3;
 }
 .main .model-1 .nav-left ul {
@@ -179,8 +220,8 @@ body {
   width: 37%;
   position: absolute;
   right: 0;
-  -webkit-animation: go-down 1s ease 1 both 3s;
-          animation: go-down 1s ease 1 both 3s;
+  -webkit-animation: go-down 1.5s ease 1 both 1.5s;
+          animation: go-down 1.5s ease 1 both 1.5s;
   z-index: 3;
 }
 .main .model-1 .nav-right ul {
@@ -290,6 +331,10 @@ body {
 }
 .main .model1-info .logo-model1 {
   width: 40%;
+  -webkit-animation: appear 2s linear 1 both 2.4s;
+          animation: appear 2s linear 1 both 2.4s;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 .main .model1-info .btns {
   width: 100%;
@@ -316,14 +361,20 @@ body {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
+  border: 0px;
   padding: 1em 3em;
-  border: 2px solid #ffffff;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   font-weight: 600;
   color: #ffffff;
   font-size: 1em;
   text-transform: uppercase;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  -webkit-animation: appear 1s ease 1 both 2.5s;
+          animation: appear 1s ease 1 both 2.5s;
+  -webkit-animation: move-border 3s ease 1 both 5s;
+          animation: move-border 3s ease 1 both 5s;
 }
 .main .model1-info .btn-scroll {
   font-weight: 600;
@@ -331,6 +382,10 @@ body {
   padding: 0.6em 1.5em;
   font-size: 1em;
   padding: 12px;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  -webkit-animation: appear 1.2s linear infinite both 8s;
+          animation: appear 1.2s linear infinite both 8s;
 }
 .main .model-2 {
   display: -webkit-box;
