--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,13 +2,13 @@
 
 body {
   font-family: $font-default;
-  overflow-x: hidden;
 }
 
 .main {
   width: 100%;
   min-height: 100vh;
   background-color: $black;
+  overflow-x: hidden;
 
   .model-1 {
     width: 100%;
@@ -91,15 +91,6 @@ body {
     top: 0%;
     @include flexible(column, wrap, center, center, auto);
 
-    .span-model {
-      text-transform: uppercase;
-      color: $white;
-      padding: 1.5em 0em;
-      text-align: center;
-      position: absolute;
-      top: 0;
-    }
-
     .text-model1 {
       height: 50vh;
       @include flexible(row, wrap, center, flex-end, auto);
@@ -121,7 +112,7 @@ body {
       padding: 2em 0em;
       margin: auto;
       display: inline-flex;
-      border: 0px;
+      border: 2px solid $white;
       padding: 1em 3em;
       transition: all 0.5s ease;
       font-weight: 600;
@@ -129,8 +120,12 @@ body {
       font-size: 1em;
       text-transform: uppercase;
       transition: all .3s ease;
-      animation: appear 1s ease 1 both 2.5s;
-      animation: move-border 3s ease 1 both 5s;
+      animation: appear 1s ease 1 both 4s;
+    }
+
+    .btn-new.hide {
+      display: none;
+      transition: all .4s ease;
     }
 
     .btn-scroll {
@@ -422,4 +417,5 @@ body {
   }
  
 }
+
 
